# redmineflux-mcp

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
src/: config.py  observability.py  plugin_registry.py  redmine_client.py  server.py  setup.py
src/tools/: agile.py  convenience.py  core.py  devops.py  feedback.py  knowledgebase.py  timesheet.py  workload.py
tests/: conftest.py  test_claude_api.py  test_core_tools.py  test_role_scenarios.py
