[project]
name = "redmineflux-mcp"
version = "0.2.0"
description = "MCP server for connecting AI agents to Redmineflux data"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.scripts]
redmineflux-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
